<?xml version="1.0"?>
<package format="2">
  <name>lrae_planner</name>
  <version>0.0.0</version>
  <description>The lrae_planner package</description>

  <maintainer email="2120210386@mail.nankai.edu.cn">Qingchen Bi</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <!-- Build tool and build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build-time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <!-- Export any relevant information here -->
  <export>
    <!-- If you need to export additional tools or configurations, include them here -->
  </export>
</package>
